Preconnect to required Origins

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>E-Library Management System</title>
+    
+    <!-- Preconnect to API server for faster network requests -->
+    <link rel="preconnect" href="https://library-api.me" crossorigin />
+    <link rel="dns-prefetch" href="https://library-api.me" />
+    
+    <!-- Preconnect to Cloudinary for faster image loading -->
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin />
+    <link rel="dns-prefetch" href="https://res.cloudinary.com" />
   </head>
   <body>
     <div id="root"></div>
