Update branding: Change title to E-Library and use IIIT logo as favicon

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/webp" href="/images/iiitdm-logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Library Management System</title>
+    <title>E-Library</title>
     
     <!-- Preconnect to API server for faster network requests -->
     <link rel="preconnect" href="https://library-api.me" crossorigin />
